Updated database connection settings

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# MYSQL_HOST='containers-us-west-123.railway.app '
-# MYSQL_USER='root'
-# MYSQL_PASSWORD='JrGHEbexYtWgVjbIzzzAHElCkwqZTbvV'
-# MYSQL_DATABASE='railway'
-# MYSQL_PORT=3306
+DB_HOST='ME'
+DB_USER='root'
+DB_PASSWORD='ZShlKDpovFAYgSCQbPeXRmVdBYNAVdsK'
+DB_DATABASE='railway'
+
