--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST='ME'
-DB_USER='root'
-DB_PASSWORD='ZShlKDpovFAYgSCQbPeXRmVdBYNAVdsK'
-DB_DATABASE='railway'
+# DB_HOST='ME'
+# DB_USER='root'
+# DB_PASSWORD='ZShlKDpovFAYgSCQbPeXRmVdBYNAVdsK'
+# DB_DATABASE='railway'
 
